--- a/Style.css
+++ b/Style.css
@@ -29,6 +29,7 @@ nav {
     text-align: center;
     display: flex;
     transition: all 0.5s ease;
+    margin: 10px 0 0 10px;
 
 }
 
@@ -40,7 +41,7 @@ nav {
 
 .logo span {
     font-weight: bold;
-    padding: 15px;
+    padding-left: 15px;
     font-size: 18px;
     text-transform: uppercase;
 }
@@ -67,4 +68,13 @@ a {
     position: relative;
     top: 12px;
     margin-left: 10px;
+}
+
+a:hover{
+    background: #eee;
+}
+
+nav:hover{
+    width: 280px;
+    transition: all 0.5s ease;
 }
